<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--<string name="app_name">Yoctu</string>-->

    <!-- getLocalGoogleEmailAddressogle default web client ID -->
    <string name="my_default_web_client_id">791157279130-cg8vmf3alqpme3lg47sq7o0m9ehaf9cb.apps.googleusercontent.com</string>

    <!-- FCM channel id -->
    <string name="notification_channel_id">com.yoctu_notification</string>


    <!-- dialog connectivity -->
    <string name="dialog_connectivity_title">État du réseau</string>
    <string name="dialog_connectivity_txt">Vous n\'êtes pas connecté.\n Voulez-vous vous connecter ? </string>
    <string name="dialog_connectivity_enable">activer</string>
    <string name="dialog_connectivity_cancel">annuler</string>
    <string name="dialog_connectivity_refused_to_enable">Vous avez décidé de ne pas vous connecter !</string>

    <string name="app_txt_connection_disable">L\'état de votre réseau est faible !</string>

    <!-- login fragment -->
    <string name="login_fragment_empty_list">Il n\'y a pas encore de topics !</string>
    <string name="login_fragment_register">Enregistrer mes topics</string>
    <string name="login_fragment_there_are_not_chosen">Vous devez choisir au moins un topic</string>
    <string name="login_fragment_text_loading_data">Chargement des données à partir du server...</string>
    <string name="login_fragment_text_google_sign_in">Connexion à Google</string>
    <string name="login_fragment_title_toppics">Topics</string>
    <string name="login_fragment_title_sign_in">Connexion</string>

    <!-- notification -->
    <string name="notif_fragment_text_loading">Chargement des messages...</string>
    <string name="notif_fragment_title_view">Notifications</string>
    <string name="notif_fragment_delete_success">Notification supprimée avec succès!</string>
    <string name="notif_fragment_delete_error">Nous ne pouvons pas supprimer la notification!</string>
    <!-- notification item -->
    <string name="notif_item_topic">Topic :</string>
    <string name="notif_item_title">Titre :</string>
    <string name="notif_item_text">Texte :</string>

    <!-- add topic URL -->
    <string name="add_topic_url_view_title">Gérer mon URL</string>
    <string name="add_topic_url_current_url_text">URL ACTUEL</string>
    <string name="add_topic_url_api_key_text">MON API KEY</string>
    <string name="add_topic_url_current_url_save_new_url_btn">Enregistrer</string>
    <string name="add_topic_url_current_url_replace_url_btn">Remplacer</string>
    <string name="add_topic_url_current_url_text_url">NOUVEAU </string>
    <string name="add_topic_url_current_url_hint">"https://montopicurl.com/api/topics</string>
    <string name="add_topic_url_api_key_hint">45855JKHKJJlk,</string>
    <string name="add_topic_url_error_message_not_valid">URL NON VALIDE ! </string>
    <string name="add_topic_url_empty_url">Le champ ne peut pas être vide!</string>
    <string name="add_topic_url_copy_current_url">URL copié</string>

    <!-- Topic -->
    <string name="topic_view_title">Mes topics</string>
    <string name="topic_view_bad_url">Nous ne pouvons pas récupérer la liste des topics</string>

    <!-- menu notification -->
    <string name="menu_notification_sign_out">Déconnexion</string>
    <string name="menu_notification_channels">Mes topics</string>
    <string name="menu_notification_channels_url">Gérer mon URL</string>

    <!-- not logged-->
    <string name="login_not_logged">Vous devez vous connecter pour voir la liste des messages</string>

    <string name="time_at">à</string>

</resources>