<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_fragment_main_linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/login_fragment_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:indeterminate="true"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/login_fragment_text_loading_data"/>

    <TextView
        android:id="@+id/login_fragment_empty_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/dimen_10"
        android:text="@string/login_fragment_empty_list"
        android:visibility="gone"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/login_fragment_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/login_fragment_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_btn"
        android:gravity="center"
        android:text="@string/login_fragment_register"
        android:textColor="@color/colorWhite"
        android:visibility="gone"/>

</LinearLayout>