<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="@dimen/dimen_5"
    android:layout_marginLeft="@dimen/dimen_15"
    android:layout_marginRight="@dimen/dimen_15"
    android:background="@drawable/rounded_item_15">

    <!-- first line -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_10"
        android:layout_marginTop="@dimen/dimen_10"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_message"
            android:layout_gravity="left"/>

        <TextView
            android:id="@+id/notification_item_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:layout_marginRight="@dimen/dimen_10"
            android:text="time here ..."
            android:textSize="@dimen/dimen_10"/>

    </LinearLayout>

    <!-- second line -->
    <LinearLayout
        android:id="@+id/notification_item_layout_topic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dimen_10"
        android:layout_marginLeft="@dimen/dimen_10"
        android:layout_marginRight="@dimen/dimen_10">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notif_item_topic"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/notification_item_topic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_3"
            android:text="title here"/>
    </LinearLayout>

    <!-- third line -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/dimen_10"
        android:layout_marginRight="@dimen/dimen_10">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notif_item_title"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/notification_item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_3"
            android:text="title here"/>
    </LinearLayout>

    <!-- fourth line -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/dimen_10"
        android:layout_marginRight="@dimen/dimen_10"
        android:layout_marginBottom="@dimen/dimen_15">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notif_item_text"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/notification_item_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_3"
            android:text="text here"/>
    </LinearLayout>

</LinearLayout>